fixing unit test in watermanagementtest.